<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primaryContainer"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vinylList"
        android:layout_width="411dp"
        android:layout_height="581dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/alkatra"
        android:text="@string/vinyl_vault"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textColorHint="@color/md_theme_onPrimaryContainer"
        android:textColorLink="@color/md_theme_onPrimaryFixed"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/vinylList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alkatra"
        android:text="@string/pop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vinylList"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alkatra"
        android:text="@string/rock"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/vinylList"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alkatra"
        android:text="Disco"
        app:layout_constraintStart_toEndOf="@+id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/vinylList"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alkatra"
        android:text="@string/hip_hop"
        app:layout_constraintStart_toEndOf="@+id/switch3"
        app:layout_constraintTop_toBottomOf="@+id/vinylList"
        tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="133dp"
        android:layout_height="103dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carritovinylvaultsinfondo"
        tools:ignore="ContentDescription,VisualLintBounds,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>